// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
<page-query>
query { posts: allWordPressPost {
    edges {
   node {
          id
      title
      }
    }
  }
}
</page-query>

<page-query lang="graphql">
query { posts: allWordPressPost {
    edges {
   node {
          id
      title
      }
    }
  }
}
</page-query>

=====================================output=====================================
<page-query>
query {
  posts: allWordPressPost {
    edges {
      node {
        id
        title
      }
    }
  }
}
</page-query>

<page-query lang="graphql">
query {
  posts: allWordPressPost {
    edges {
      node {
        id
        title
      }
    }
  }
}
</page-query>

================================================================================
`;

exports[`graphql.vue format 2`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<page-query>
query { posts: allWordPressPost {
    edges {
   node {
          id
      title
      }
    }
  }
}
</page-query>

<page-query lang="graphql">
query { posts: allWordPressPost {
    edges {
   node {
          id
      title
      }
    }
  }
}
</page-query>

=====================================output=====================================
<page-query>
query {
  posts: allWordPressPost {
    edges {
      node {
        id
        title
      }
    }
  }
}
</page-query>

<page-query lang="graphql">
query {
  posts: allWordPressPost {
    edges {
      node {
        id
        title
      }
    }
  }
}
</page-query>

================================================================================
`;

exports[`graphql.vue format 3`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
<page-query>
query { posts: allWordPressPost {
    edges {
   node {
          id
      title
      }
    }
  }
}
</page-query>

<page-query lang="graphql">
query { posts: allWordPressPost {
    edges {
   node {
          id
      title
      }
    }
  }
}
</page-query>

=====================================output=====================================
<page-query>
query {
  posts: allWordPressPost {
    edges {
      node {
        id
        title
      }
    }
  }
}
</page-query>

<page-query lang="graphql">
query {
  posts: allWordPressPost {
    edges {
      node {
        id
        title
      }
    }
  }
}
</page-query>

================================================================================
`;

exports[`graphql.vue format 4`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
vueIndentScriptAndStyle: true
                                                                                | printWidth
=====================================input======================================
<page-query>
query { posts: allWordPressPost {
    edges {
   node {
          id
      title
      }
    }
  }
}
</page-query>

<page-query lang="graphql">
query { posts: allWordPressPost {
    edges {
   node {
          id
      title
      }
    }
  }
}
</page-query>

=====================================output=====================================
<page-query>
  query {
    posts: allWordPressPost {
      edges {
        node {
          id
          title
        }
      }
    }
  }
</page-query>

<page-query lang="graphql">
  query {
    posts: allWordPressPost {
      edges {
        node {
          id
          title
        }
      }
    }
  }
</page-query>

================================================================================
`;

exports[`json.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
<i18n>
{ "en": {
    "hello": "hello world!"
    
    
    }, "ja": {
   
   
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<i18n lang="json">
{ "en": {
    "hello": "hello world!"
    
    
    }, "ja": {
   
   
    "hello": "こんにちは、世界！"
  }
}
</i18n>

=====================================output=====================================
<i18n>
{
  "en": {
    "hello": "hello world!"
  },
  "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<i18n lang="json">
{
  "en": {
    "hello": "hello world!"
  },
  "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

================================================================================
`;

exports[`json.vue format 2`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<i18n>
{ "en": {
    "hello": "hello world!"
    
    
    }, "ja": {
   
   
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<i18n lang="json">
{ "en": {
    "hello": "hello world!"
    
    
    }, "ja": {
   
   
    "hello": "こんにちは、世界！"
  }
}
</i18n>

=====================================output=====================================
<i18n>
{
  "en": {
    "hello": "hello world!"
  },
  "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<i18n lang="json">
{
  "en": {
    "hello": "hello world!"
  },
  "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

================================================================================
`;

exports[`json.vue format 3`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
<i18n>
{ "en": {
    "hello": "hello world!"
    
    
    }, "ja": {
   
   
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<i18n lang="json">
{ "en": {
    "hello": "hello world!"
    
    
    }, "ja": {
   
   
    "hello": "こんにちは、世界！"
  }
}
</i18n>

=====================================output=====================================
<i18n>
{
  "en": {
    "hello": "hello world!"
  },
  "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<i18n lang="json">
{
  "en": {
    "hello": "hello world!"
  },
  "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

================================================================================
`;

exports[`json.vue format 4`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
vueIndentScriptAndStyle: true
                                                                                | printWidth
=====================================input======================================
<i18n>
{ "en": {
    "hello": "hello world!"
    
    
    }, "ja": {
   
   
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<i18n lang="json">
{ "en": {
    "hello": "hello world!"
    
    
    }, "ja": {
   
   
    "hello": "こんにちは、世界！"
  }
}
</i18n>

=====================================output=====================================
<i18n>
  {
    "en": {
      "hello": "hello world!"
    },
    "ja": {
      "hello": "こんにちは、世界！"
    }
  }
</i18n>

<i18n lang="json">
  {
    "en": {
      "hello": "hello world!"
    },
    "ja": {
      "hello": "こんにちは、世界！"
    }
  }
</i18n>

================================================================================
`;

exports[`lang-attribute.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
<custom lang="babel">
const foo =       'foo'
</custom>

=====================================output=====================================
<custom lang="babel">
const foo = "foo";
</custom>

================================================================================
`;

exports[`lang-attribute.vue format 2`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<custom lang="babel">
const foo =       'foo'
</custom>

=====================================output=====================================
<custom lang="babel">
const foo = "foo";
</custom>

================================================================================
`;

exports[`lang-attribute.vue format 3`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
<custom lang="babel">
const foo =       'foo'
</custom>

=====================================output=====================================
<custom lang="babel">
const foo = "foo"
</custom>

================================================================================
`;

exports[`lang-attribute.vue format 4`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
vueIndentScriptAndStyle: true
                                                                                | printWidth
=====================================input======================================
<custom lang="babel">
const foo =       'foo'
</custom>

=====================================output=====================================
<custom lang="babel">
  const foo = "foo";
</custom>

================================================================================
`;

exports[`unknown.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
<i18n lang="foooo">
{"en": {
    "hello": "hello world!"
  }, "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<custom>
const foo =


     "foo";
</custom>

=====================================output=====================================
<i18n lang="foooo">
{"en": {
    "hello": "hello world!"
  }, "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<custom>
const foo =


"foo";
</custom>

================================================================================
`;

exports[`unknown.vue format 2`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<i18n lang="foooo">
{"en": {
    "hello": "hello world!"
  }, "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<custom>
const foo =


     "foo";
</custom>

=====================================output=====================================
<i18n lang="foooo">
{"en": {
    "hello": "hello world!"
  }, "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<custom>
const foo =


"foo";
</custom>

================================================================================
`;

exports[`unknown.vue format 3`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
<i18n lang="foooo">
{"en": {
    "hello": "hello world!"
  }, "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<custom>
const foo =


     "foo";
</custom>

=====================================output=====================================
<i18n lang="foooo">
{"en": {
    "hello": "hello world!"
  }, "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<custom>
const foo =


"foo";
</custom>

================================================================================
`;

exports[`unknown.vue format 4`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
vueIndentScriptAndStyle: true
                                                                                | printWidth
=====================================input======================================
<i18n lang="foooo">
{"en": {
    "hello": "hello world!"
  }, "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<custom>
const foo =


     "foo";
</custom>

=====================================output=====================================
<i18n lang="foooo">
  {"en": {
    "hello": "hello world!"
  }, "ja": {
    "hello": "こんにちは、世界！"
  }
}
</i18n>

<custom>
  const foo =


  "foo";
</custom>

================================================================================
`;

exports[`yaml.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
<i18n>
en:
                       hello: "hello world!"
ja:
        hello: "こんにちは、世界！"
</i18n>

<i18n lang="yaml">
en:
                       hello: "hello world!"
ja:
        hello: "こんにちは、世界！"
</i18n>

=====================================output=====================================
<i18n>
en:
  hello: "hello world!"
ja:
  hello: "こんにちは、世界！"
</i18n>

<i18n lang="yaml">
en:
  hello: "hello world!"
ja:
  hello: "こんにちは、世界！"
</i18n>

================================================================================
`;

exports[`yaml.vue format 2`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<i18n>
en:
                       hello: "hello world!"
ja:
        hello: "こんにちは、世界！"
</i18n>

<i18n lang="yaml">
en:
                       hello: "hello world!"
ja:
        hello: "こんにちは、世界！"
</i18n>

=====================================output=====================================
<i18n>
en:
  hello: "hello world!"
ja:
  hello: "こんにちは、世界！"
</i18n>

<i18n lang="yaml">
en:
  hello: "hello world!"
ja:
  hello: "こんにちは、世界！"
</i18n>

================================================================================
`;

exports[`yaml.vue format 3`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
<i18n>
en:
                       hello: "hello world!"
ja:
        hello: "こんにちは、世界！"
</i18n>

<i18n lang="yaml">
en:
                       hello: "hello world!"
ja:
        hello: "こんにちは、世界！"
</i18n>

=====================================output=====================================
<i18n>
en:
  hello: "hello world!"
ja:
  hello: "こんにちは、世界！"
</i18n>

<i18n lang="yaml">
en:
  hello: "hello world!"
ja:
  hello: "こんにちは、世界！"
</i18n>

================================================================================
`;

exports[`yaml.vue format 4`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
vueIndentScriptAndStyle: true
                                                                                | printWidth
=====================================input======================================
<i18n>
en:
                       hello: "hello world!"
ja:
        hello: "こんにちは、世界！"
</i18n>

<i18n lang="yaml">
en:
                       hello: "hello world!"
ja:
        hello: "こんにちは、世界！"
</i18n>

=====================================output=====================================
<i18n>
  en:
    hello: "hello world!"
  ja:
    hello: "こんにちは、世界！"
</i18n>

<i18n lang="yaml">
  en:
    hello: "hello world!"
  ja:
    hello: "こんにちは、世界！"
</i18n>

================================================================================
`;
